[package]
name = "stalkermap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A comprehensive Rust library for building CLI network scanner applications with robust input validation, terminal interaction, and URL parsing capabilities."
repository = "https://github.com/seakerOner/stalkermap-rs"
readme = "../README.md"
keywords = ["network", "scanner", "cli", "validation", "url"]
categories = ["network-programming", "command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1.47.1", optional = true, features = ["full"]}

[features]
default = ["std"]
std = []
tokio-dep = ["tokio"]
agnostic = []

