[package]
name = "stalkermap"
version = "0.1.31"
edition = "2024"
license = "MIT"
description = "A comprehensive Rust library for building CLI network scanner applications with robust input validation, terminal interaction, and URL parsing capabilities."
repository = "https://github.com/seakerOner/stalkermap-rs"
readme = "README.md"
keywords = ["network", "scanner", "cli", "validation", "url"]
categories = ["network-programming", "command-line-utilities", "development-tools"]

[dependencies]
cfg-if = "1.0.3"
rand = { version = "0.9.2", features = ["small_rng"] }
tokio = { version = "1.47.1", optional = true, features = ["full"]}

[features]
default = []
std = []
tokio-dep = ["tokio"]
agnostic = []

