[package]
name = "stalkermap"
version = "0.1.40"
edition = "2024"
license = "MIT"
description = "A comprehensive Rust library for building CLI network scanner applications with robust input validation, terminal interaction, and URL parsing capabilities."
repository = "https://github.com/seakerOner/stalkermap-rs"
readme = "README.md"
keywords = ["network", "scanner", "cli", "validation", "url"]
categories = ["network-programming", "command-line-utilities", "development-tools"]

[dependencies]
async-trait = { version = "0.1.89", optional = true }
cfg-if = "1.0.3"
rand = { version = "0.9.2", features = ["small_rng"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
tokio = { version = "1.47.1", optional = true, features = ["net", "time", "rt-multi-thread", "macros"]}
tokio-stream = { version = "0.1.17", features = ["sync"], optional = true }

[features]
default = []
std = []
tokio-dep = ["tokio", "tokio-stream", "async-trait", "serde", "serde_json"]
agnostic = []

